--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -116,10 +116,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [],
-   "source": [
+   "text": [
     "Specify the data files to use (portfolio and company data). Per default example data is used.\n",
     "To change the files, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
-    "Next, change the file locations between the quotes below.\n",
+    "Next, change the file locations between the quotes below.\n"
+    ],
+   "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
@@ -145,9 +147,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "outputs": [],
+   "text": [
+        "You can change the default score (fallback_score) and aggregation method (aggregation_method) below. The values specified here are the recommended defaults by SBTi.\n",
+    "The options of the default score are 3.2, 3.9 or 4.5. Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS.\n"
+    ],
    "source": [
-    "You can change the default score (fallback_score) and aggregation method (aggregation_method) below. The values specified here are the recommended defaults by SBTi.\n",
-    "The options of the default score are 3.2, 3.9 or 4.5. Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS.\n",
     "time_frames = [SBTi.interfaces.ETimeFrames.MID]\n",
     "scopes = [EScope.S1S2, EScope.S1S2S3]\n",
     "fallback_score = 3.2\n",
