Changed aggregation method in coverage calculation to refer to temp score object

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -41,17 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Download the dummy data\n",
@@ -118,14 +109,17 @@
     "Specify the data files to use (portfolio and company data). Per default example data is used.\n",
     "To change the files, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
     "Next, change the file locations between the quotes below.\n"
-    ],
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
-  },  
+  },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
@@ -143,25 +137,18 @@
    "cell_type": "markdown",
    "source": [
     "### Compute temperature scores\n",
-    "Configure computation settings"
+    "Configure computation settings\n",
+    "\n",
+    "You can change the default score (fallback_score) and aggregation method (aggregation_method) below. The values specified here are the recommended defaults by SBTi.\n",
+    "The options of the default score are 3.2, 3.9 or 4.5. Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS."
    ],
    "metadata": {
     "collapsed": false
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-   "You can change the default score (fallback_score) and aggregation method (aggregation_method) below. The values specified here are the recommended defaults by SBTi.\n",
-    "The options of the default score are 3.2, 3.9 or 4.5. Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS.\n"
-    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "time_frames = [SBTi.interfaces.ETimeFrames.MID]\n",
@@ -180,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "temperature_score = TemperatureScore(\n",
@@ -213,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
@@ -245,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -258,6 +245,77 @@
    ],
    "source": [
     "print_aggregations(aggregated_scores)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "mid - S1S2\n",
+      "Communication Services: 3.20 degrees Celcius\n",
+      "Consumer Discretionary: 2.00 degrees Celcius\n",
+      "Consumer Staples: 3.20 degrees Celcius\n",
+      "Energy: 3.20 degrees Celcius\n",
+      "Financials: 3.20 degrees Celcius\n",
+      "Health Care: 2.70 degrees Celcius\n",
+      "Industrials: 2.33 degrees Celcius\n",
+      "Information Technology: 1.20 degrees Celcius\n",
+      "Materials: 3.20 degrees Celcius\n",
+      "Real Estate: 2.59 degrees Celcius\n",
+      "Utilities: 2.44 degrees Celcius\n",
+      "\n",
+      "mid - S1S2S3\n",
+      "Communication Services: 3.20 degrees Celcius\n",
+      "Consumer Discretionary: 3.02 degrees Celcius\n",
+      "Consumer Staples: 3.20 degrees Celcius\n",
+      "Energy: 3.20 degrees Celcius\n",
+      "Financials: 3.11 degrees Celcius\n",
+      "Health Care: 3.05 degrees Celcius\n",
+      "Industrials: 2.70 degrees Celcius\n",
+      "Information Technology: 2.08 degrees Celcius\n",
+      "Materials: 3.20 degrees Celcius\n",
+      "Real Estate: 3.08 degrees Celcius\n",
+      "Utilities: 2.50 degrees Celcius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_grouped_scores(aggregated_scores)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part of portfolio with SBTi approved targets is 35.45%\n"
+     ]
+    }
+   ],
+   "source": [
+    "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
+    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), aggregation_method)\n",
+    "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
    ],
    "metadata": {
     "collapsed": false,
