Changed aggregation method in coverage calculation to refer to temp score object

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -430,7 +430,7 @@
    ],
    "source": [
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
-    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
+    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), temperature_score.aggregation_method)\n",
     "print(\"Part of portfolio with climate targets is {c:.2f}%\".format(c=coverage))"
    ],
    "metadata": {
