Changed aggregation method in coverage calculation to refer to temp score object

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -314,7 +314,7 @@
    ],
    "source": [
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
-    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), aggregation_method)\n",
+    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), temperature_score.aggregation_method)\n",
     "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
    ],
    "metadata": {
