update some texts in analysis notebook

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "source": [
     "#### Logging\n",
-    "The SBTi module uses the Python standard library logging utilities to send log messages. The log level can be changed according to the user's needs."
+    "The SBTi module uses the Python standard library logging utilities to send log messages. The log level can be changed according to the users needs."
    ],
    "metadata": {
     "collapsed": false,
@@ -130,7 +130,9 @@
    "cell_type": "markdown",
    "source": [
     "### Create a data provider\n",
-    "Data providers let you connect to the data source of your choice."
+    "Data providers let you connect to the data source of your choice.\n",
+    "Here we use Excel data. To change the file used for company data, first upload to (when using Google Colab) or place the files in the data map (when running locally).\n",
+    "Next, change the file location between the quotes below."
    ],
    "metadata": {
     "collapsed": false
@@ -154,7 +156,9 @@
    "cell_type": "markdown",
    "source": [
     "### Load your portfolio\n",
-    "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column."
+    "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column.\n",
+    "To change the portfolio file, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
+    "Next, change the file location between the quotes below."    
    ],
    "metadata": {
     "collapsed": false
@@ -545,12 +549,12 @@
    "source": [
     "### Scenarios\n",
     "To determine the effect of engaging (part of) your portfolio, you can run a number of scenarios:\n",
-    " - 1: Engage companies to set targets. This means that the default score (i.e. the score when a company didn't set a target) will be set to 2 degrees celcius.\n",
-    " - 2: Engage companies to have their targets validated by the SBTi. This means that the maximum score for all targets will be capped at 1.75 degrees celcius.\n",
-    " - 3a: engage the top 10 contributors to set targets. This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees celcius.\n",
-    " - 3b: engage the top 10 contributors to have their targets validated by the SBTi. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius.\n",
-    " - 4a: engage the predefined companies to set targets. This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees celcius.\n",
-    " - 4b: engage the predefined companies to have their targets validated by the SBTi. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius.\n",
+    " - 1: Engage companies to set 2 degree targets. This means that the score of all companies that didn't yet set a target will be set to 2 degrees celcius.\n",
+    " - 2: Engage companies to set well below 2 degree targets. The maximum score for all companies that have set targets will be capped at 1.75 degrees celcius.\n",
+    " - 3a: Engage the top 10 contributors to set 2 degree targets.\n",
+    " - 3b: Engage the top 10 contributors to have set well below 2 degree targets. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius.\n",
+    " - 4a: Engage the predefined companies to set 2 degree targets.\n",
+    " - 4b: Engage the predefined companies to set well below 2 degree targets. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius.\n",
     "\n",
     "In this example, we will investigate the effect of engaging Company Q and Company AF in setting targets."
    ],
