Moved portfolio file to data folder

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -85,8 +85,8 @@
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
-    "if not os.path.isfile(\"example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/%23210_David/examples/utils.py\", \"utils.py\")\n",
     "try:  # Import statement when run in Google Colabs\n",
