--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -79,8 +79,8 @@
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
-    "if not os.path.isfile(\"example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/%23210_David/examples/utils.py\", \"utils.py\")\n",
     "try:  # Import statement when run in Google Colabs\n",
@@ -158,7 +158,7 @@
     "### Load your portfolio\n",
     "In our case the portfolio is stored as a CSV file. The portfolio should at least have an \"id\" (the identifier of the company) and a \"proportion\" (the weight of the company in your portfolio e.g. the value of the shares you hold) column.\n",
     "To change the portfolio file, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
-    "Next, change the file location between the quotes below."    
+    "Next, change the file location between the quotes below."
    ],
    "metadata": {
     "collapsed": false
