Updated text of anonymization

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -481,9 +481,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "If you run the SBTi tool locally, you:\n",
-    "- Specify the directory and filenames in the cell below\n",
-    "- Run the cell below"
+    "If you run the SBTi tool locally or from Google Colab, you:\n",
+    "- Specify and filenames in the cell below\n",
+    "- Run the cell below\n",
+    "\n",
+    "If you run the SBTi tool from Google Colab, you:\n",
+    "- Click on the files icon in the left pane\n",
+    "- Click the three dots that appear after hovering over the file\n",
+    "- Download the file to your local machine"
    ],
    "metadata": {
     "collapsed": false
@@ -494,8 +499,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "portfolio_filename = 'C://Users//username//Documents//portfolio.xlsx'\n",
-    "provider_filename = 'C://Users//username//Documents//provider.xlsx'\n",
+    "portfolio_filename = 'portfolio.xlsx'\n",
+    "provider_filename = 'provider.xlsx'\n",
     "portfolio.to_excel(portfolio_filename, index=False)\n",
     "provider.data['fundamental_data'].to_excel(provider_filename, sheet_name='fundamental_data', index=False)\n",
     "provider.data['target_data'].to_excel(provider_filename, sheet_name='target_data', index=False)"
