Updated explanation of the anonymization part of the notebook

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -422,12 +422,23 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In order to store the portfolio and provider data locally, two options apply.\n",
-    "If you use the SBTi tool from a docker container, for each of the following 3 cells:\n",
-    "- Run the cell\n",
-    "- Open an Excel file\n",
-    "- Right-click an Excel cell and click 'paste' or select an Excel cell and press Ctrl+v\n",
-    "- Save the Excel file"
+    "In order to store the portfolio and provider data locally, two options apply:\n",
+    "1. You are running the SBTi tool locally or from Google Colab\n",
+    "2. You are running the SBTi tool from a Docker container"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you run the SBTi tool locally or from Google Colab, you:\n",
+    "- Specify and filenames in the cell below\n",
+    "- Run the cell below"
    ],
    "metadata": {
     "collapsed": false,
@@ -438,6 +449,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "portfolio_filename = 'portfolio.xlsx'\n",
+    "provider_filename = 'provider.xlsx'\n",
+    "portfolio.to_excel(portfolio_filename, index=False)\n",
+    "provider.data['fundamental_data'].to_excel(provider_filename, sheet_name='fundamental_data', index=False)\n",
+    "provider.data['target_data'].to_excel(provider_filename, sheet_name='target_data', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you run the SBTi tool locally, you finished the notebook at this point. If you run the SBTi tool from Google Colab, you:\n",
+    "- Click on the files icon in the left pane\n",
+    "- Click the three dots that appear after hovering over the file\n",
+    "- Download the file to your local machine\n",
+    "\n",
+    "and you finished the notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you use the SBTi tool from a docker container, for each of the following 3 cells:\n",
+    "- Run the cell\n",
+    "- Open an Excel file\n",
+    "- Right-click an Excel cell and click 'paste' or select an Excel cell and press Ctrl+v\n",
+    "- Save the Excel file\n",
+    "\n",
+    "You have then finished the notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "portfolio.to_clipboard(excel=True, index=False)"
    ],
@@ -446,9 +512,7 @@
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "execution_count": null,
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
@@ -470,40 +534,6 @@
    "outputs": [],
    "source": [
     "provider.data['target_data'].to_clipboard(excel=True, index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "If you run the SBTi tool locally or from Google Colab, you:\n",
-    "- Specify and filenames in the cell below\n",
-    "- Run the cell below\n",
-    "\n",
-    "If you run the SBTi tool from Google Colab, you:\n",
-    "- Click on the files icon in the left pane\n",
-    "- Click the three dots that appear after hovering over the file\n",
-    "- Download the file to your local machine"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "portfolio_filename = 'portfolio.xlsx'\n",
-    "provider_filename = 'provider.xlsx'\n",
-    "portfolio.to_excel(portfolio_filename, index=False)\n",
-    "provider.data['fundamental_data'].to_excel(provider_filename, sheet_name='fundamental_data', index=False)\n",
-    "provider.data['target_data'].to_excel(provider_filename, sheet_name='target_data', index=False)"
    ],
    "metadata": {
     "collapsed": false,
