Updated logger explanation

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -352,7 +352,9 @@
    "cell_type": "markdown",
    "source": [
     "#### Logging\n",
-    "The SBTi module uses the Python standard library logging utilities to send log messages. The log level can be changed according to the users needs."
+    "The following cell initialises the Python standard library logging utilities. The SBTi module makes use of these utilities\n",
+    "to send log messages on warnings or errors that can arise during use of the module, which help the user to pinpoint\n",
+    "potential mistakes. The log level can be changed according to the users needs."
    ],
    "metadata": {
     "collapsed": false,
