Added SBTi guidance link to text

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -6,7 +6,7 @@
     "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage\n",
     "## Do you want to understand what drives the temperature score of your portfolio to make better engagement and investment decisions?\n",
     "\n",
-    "# ADD FIGURE"
+    "![ExampleGraphs](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_HeroImage.jpg)"
    ],
    "metadata": {
     "collapsed": false
@@ -55,7 +55,10 @@
     "SBT Temperature Scoring. The latter two methods, Portfolio Coverage and Temperature Scoring, require assessing the targets\n",
     "disclosed by the companies within a financial institution's portfolio.\n",
     "\n",
-    "Financial institutions may use the portfolio coverage and/or [temperature scoring methods](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) to set targets for their corporate instruments, including corporate debt, listed equity and bonds, and private equity and debt (See relevant “Required Activities” in Table 5-2 of the SBTi guidance **(INSERT LINK TO GUIDANCE)**) to drive adoption of science-based targets.\n",
+    "Financial institutions may use the portfolio coverage and/or [temperature scoring methods](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf)\n",
+    "to set targets for their corporate instruments, including corporate debt, listed equity and bonds, and private equity and\n",
+    "debt (See relevant “Required Activities” in Table 5-2 of the [SBTi guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf)\n",
+    "to drive adoption of science-based targets).\n",
     "\n",
     "To use the *portfolio coverage method*, financial institutions commit to engaging with their investees to set their own\n",
     "approved science-based targets, such that the financial institution is on a linear path to 100% SBT portfolio coverage by\n",
@@ -230,7 +233,7 @@
     "temperature score. This can be done by changing your exposure to your holdings in the portfolio import file or by rerunning the\n",
     "calculations using hypothetical scenarios.\n",
     "\n",
-    "# ADD FIGURE"
+    "![TSWorkflow](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_DataFlow.png)"
    ],
    "metadata": {
     "collapsed": false,
@@ -246,7 +249,7 @@
     "To start using the tool, run the below cells in order by clicking the \"play\" buttons when you hover over the space in between the\n",
     "brackets [  ] for each cell, as below. We'll show you how to select the various options and to use your own data through this notebook.\n",
     "\n",
-    "# ADD FIGURE\n",
+    "![PlayButton](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_Play.png)\n",
     "\n",
     "Be aware that the session in this notebook is temporary. When you close it or leave it unused for a long period, you need to restart\n",
     "the notebook from the beginning."
@@ -533,7 +536,7 @@
     "Hence the scope coverage and the target year of the targets is necessary to accurately classify these targets. The below\n",
     "figure shows how targets are currently split by scope and timeframe.\n",
     "\n",
-    "# ADD FIGURE"
+    "![ScopesTimeframes](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_CompanyAggregation.png)"
    ],
    "metadata": {
     "collapsed": false,
@@ -551,7 +554,7 @@
     "coverage), the ambition is applied only to the scope 1+2 portion, and the if no details on scope 3 coverage are provided,\n",
     "the scope 3 portion would receive the default score.\n",
     "\n",
-    "# ADD FIGURE"
+    "![ScopeClassification](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_Scopes.png)"
    ],
    "metadata": {
     "collapsed": false,
@@ -602,7 +605,7 @@
     "\n",
     "For all companies with one valid target in each scope and timeframe, generate the 6 scores per company. For companies who do not report, for example a scope 3 target, they receive a default score. For companies with no valid targets, all 6 entries would receive default score (see below). The 6 entries are combined to produce an overall scope 1+2+3 score using the most recent reported GHG weighting of the company.\n",
     "\n",
-    "# ADD FIGURE"
+    "![ScopeTimeframeTable](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_CompanyTS.PNG)"
    ],
    "metadata": {
     "collapsed": false,
