Added link to basic colab notebook introduction

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -36,7 +36,7 @@
     "Beware of the order in which you run the cells - if you do not follow the order below, you may run into errors. In that\n",
     "case, start again from the top.\n",
     "\n",
-    "If you are not familiar with Notebooks, please refer to **(INSERT LINK TO EASY INTRODUCTION)** for an introduction."
+    "If you are not familiar with Notebooks, please refer to [this introduction](https://colab.research.google.com/notebooks/basic_features_overview.ipynb)."
    ],
    "metadata": {
     "collapsed": false,
