Added final check on percentage computed with default temp score

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -9,8 +9,8 @@
     }
    },
    "source": [
-    "# SBTi Temperature Alignment tool - Reporting\n",
-    "This notebook can be used to compute your portfolio's temperature scores and save the results for the TVT to check their validity."
+    "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage - Target Reporting\n",
+    "This notebook can be used to compute your portfolio's temperature scores and save the results for SBTi's Target Validation Team (TVT) to check their validity."
    ]
   },
   {
@@ -50,10 +50,8 @@
     "from SBTi.data.excel import ExcelProvider\n",
     "from SBTi.portfolio_aggregation import PortfolioAggregationMethod\n",
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
-    "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
-    "from SBTi.target_validation import TargetProtocol\n",
+    "from SBTi.temperature_score import TemperatureScore\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
-    "%aimport -pandas\n",
     "import pandas as pd"
    ],
    "metadata": {
@@ -108,7 +106,7 @@
    "source": [
     "Specify the data files to use (portfolio and company data). Per default example data is used.\n",
     "To change the files, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
-    "Next, change the file locations between the quotes below.\n"
+    "Next, change the file locations between the quotes below."
    ],
    "metadata": {
     "collapsed": false,
@@ -119,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
-    "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
    ],
    "metadata": {
@@ -148,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "time_frames = [SBTi.interfaces.ETimeFrames.MID]\n",
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "temperature_score = TemperatureScore(\n",
@@ -200,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
@@ -244,6 +242,7 @@
     }
    ],
    "source": [
+    "# Portfolio score\n",
     "print_aggregations(aggregated_scores)"
    ],
    "metadata": {
@@ -291,6 +290,7 @@
     }
    ],
    "source": [
+    "# Score per sector\n",
     "print_grouped_scores(aggregated_scores)"
    ],
    "metadata": {
@@ -302,20 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Part of portfolio with SBTi approved targets is 35.45%\n"
-     ]
+     "data": {
+      "text/plain": "                    company_name    company_id  temperature_results\n0    Advanced Micro Devices, Inc  US0079031078             0.000000\n2    Advanced Micro Devices, Inc  US0079031078             0.727326\n3             Adobe Systems Inc.  US00724F1012             0.000000\n5             Adobe Systems Inc.  US00724F1012             0.000000\n6                Capgemini Group  FR0000125338             1.000000\n..                           ...           ...                  ...\n140                   Company AD  KE0000000030             1.000000\n141                   Company AE  TH0000000031             1.000000\n143                   Company AE  TH0000000031             1.000000\n144                   Company AF  ID0000000032             1.000000\n146                   Company AF  ID0000000032             1.000000\n\n[98 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>company_name</th>\n      <th>company_id</th>\n      <th>temperature_results</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>US0079031078</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Advanced Micro Devices, Inc</td>\n      <td>US0079031078</td>\n      <td>0.727326</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Adobe Systems Inc.</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Adobe Systems Inc.</td>\n      <td>US00724F1012</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Capgemini Group</td>\n      <td>FR0000125338</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>Company AD</td>\n      <td>KE0000000030</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>141</th>\n      <td>Company AE</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>143</th>\n      <td>Company AE</td>\n      <td>TH0000000031</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>144</th>\n      <td>Company AF</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>Company AF</td>\n      <td>ID0000000032</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>98 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
-    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), temperature_score.aggregation_method)\n",
-    "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
+    "# Percentage of score based on default score\n",
+    "amended_portfolio[['company_name', 'company_id', 'temperature_results']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -326,54 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "mid - S1S2\n",
-      "Communication Services: 3.20 degrees Celcius\n",
-      "Consumer Discretionary: 2.00 degrees Celcius\n",
-      "Consumer Staples: 3.20 degrees Celcius\n",
-      "Energy: 3.20 degrees Celcius\n",
-      "Financials: 3.20 degrees Celcius\n",
-      "Health Care: 2.70 degrees Celcius\n",
-      "Industrials: 2.33 degrees Celcius\n",
-      "Information Technology: 1.20 degrees Celcius\n",
-      "Materials: 3.20 degrees Celcius\n",
-      "Real Estate: 2.59 degrees Celcius\n",
-      "Utilities: 2.44 degrees Celcius\n",
-      "\n",
-      "mid - S1S2S3\n",
-      "Communication Services: 3.20 degrees Celcius\n",
-      "Consumer Discretionary: 3.02 degrees Celcius\n",
-      "Consumer Staples: 3.20 degrees Celcius\n",
-      "Energy: 3.20 degrees Celcius\n",
-      "Financials: 3.11 degrees Celcius\n",
-      "Health Care: 3.05 degrees Celcius\n",
-      "Industrials: 2.70 degrees Celcius\n",
-      "Information Technology: 2.08 degrees Celcius\n",
-      "Materials: 3.20 degrees Celcius\n",
-      "Real Estate: 3.08 degrees Celcius\n",
-      "Utilities: 2.50 degrees Celcius\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_grouped_scores(aggregated_scores)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -384,6 +338,7 @@
     }
    ],
    "source": [
+    "# Percentage of SBTs in portfolio\n",
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
     "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
     "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
@@ -407,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "portfolio, provider = anonymize(portfolio, provider)"
@@ -502,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "portfolio.to_clipboard(excel=True, index=False)"
